Fixed issue with h3 titles on dark mode

--- a/styles.css
+++ b/styles.css
@@ -229,6 +229,10 @@ body.dark-mode {
     color: #fff;
 }
 
+body.dark-mode #testimonials .testimonial-title {
+    color: white;
+}
+
 body.dark-mode header, body.dark-mode footer {
     background-color: #222;
 }
